add mf tool for manifest.mf parsing